# literacy-accessibility

./: README.md
literacy-extension/: README.md  background.js  content.js  manifest.json  offscreen.html  offscreen.js  package.json  popup.html  popup.js
original-hackathon-v1/: background.js  manifest.json
original-hackathon-v1/service/: .black.toml  .env.example  main.py  pyproject.toml
