[tool.poetry]
name = "momuno-notebooks-translation-hack"
package-mode = false
license = "Copyright (c) Microsoft. All rights reserved."
authors = ["Mollie Munoz <momuno@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]

python = "~3.11"
python-dotenv = "^1.0.1"
openai = "^1.16.1"
nest-asyncio = "^1.6.0"
azure-identity = "^1.17.1"

fastapi = "~0.115.0"
httpx = "~0.27.0"
bs4 = "^0.0.2"
chromadb = "^0.4.24"
semantic-kernel = "^1.3"
langchain = "^0.3.0"
langchain-openai = "0.2.0"
langchain_community = "0.3.0"
pandas = "^2.2.1"
matplotlib = "^3.8.4"
tabulate = "^0.9.0"
rich = "^13.7.1"
pydantic = "^2.6.4"
idna = "^3.7"
tiktoken = "^0.7.0"
requests = "^2.32.0"
playwright = "1.47.0"
pypdf2 = "^3.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
black = "^24.3.0"
flake8 = "^6.1.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
profile = "black"

[tool.pyright]
exclude = [
    "__pycache__",
    ".vscode",
    ".ipynb_checkpoints",
    "build",
    "dist",
    "venv",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".git",
]
